# extremers

./: .babelrc  .cursorrules  .gitignore  Cargo.toml  index.html  package-lock.json  package.json  rollup.config.js  vite.config.js
.github/workflows/: build.yml
book/: .gitignore  build.py  chapter1.md  description.json
book/css/: general.css
common/: Cargo.toml
common/src/: http.rs  lib.rs
engine/: Cargo.toml
engine/src/: callbacks.rs  core.bak  core.rs  event_core.rs  flatdiff.rs  geo_math.rs  lib.rs  line.rs  race.rs  race_tests.rs  serde_engine.rs  serde_engine_tests.rs  test_engine.rs  test_flatdiff.rs  types.rs
engine/src/core/: callbacks.rs  event_core.rs  event_core_tests.rs  flatdiff.rs  request_wrapper.rs
engine/src/core/flatdiff_derive/src/: lib.rs
engine/src/flatdiff/: Cargo.toml
engine/src/flatdiff/src/: lib.rs
engine/src/flatdiff_derive/: Cargo.toml
engine/src/flatdiff_derive/src/: lib.rs
engine_race/: Cargo.toml
engine_race/client-js/: package-lock.json  package.json
engine_race/client-js/src/: api.js  common.jsx  confirm.jsx  idle.jsx  index.jsx  race.jsx  sequence.jsx  style.css
engine_race/src/: geo_math.rs  lib.rs  line.rs  race.rs  race_tests.rs  types.rs
engine_tune/: Cargo.toml
engine_tune/src/: lib.rs
esp32/: Cargo.toml  rust-toolchain.toml
esp32/.cargo/: config.toml
esp32/src/: main.rs
extreme-http/: Cargo.toml
extreme-http/src/: http.rs  main.rs  network_tasks.rs  nmea_parser.rs
extreme-map/: Cargo.toml  build.rs
extreme-map/client-js/src/: common.jsx  idle.jsx  sequence.jsx  style.css
extreme-map/src/: geo_math.rs  lib.rs  maps.rs  race.rs  race_tests.rs  types.rs
extreme-race/: Cargo.toml
extreme-race/client-js/: vite.config.js
extreme-race/client-js/src/: api.js  confirm.jsx  index.jsx  setup.jsx  style.css
extreme-race/src/: lib.rs  line.rs  race.rs  race_tests.rs
extreme-traits/: Cargo.toml
extreme-traits/client-js/: index.html  package-lock.json  rollup.config.js
extreme-traits/client-js/src/: index.jsx  style.css
extreme-traits/src/: lib.rs  selector.rs  traits.rs
extreme-tune/: Cargo.toml
extreme-tune/client-js/: index.html  package-lock.json
extreme-tune/client-js/src/: confirm.jsx  index.jsx  style.css
extreme-tune/src/: lib.rs  tune.rs  tune_tests.rs
flatdiff/: Cargo.toml
flatdiff/flatdiff_derive/examples/: test_versioned.rs
flatdiff/flatdiff_derive/src/: lib.rs
flatdiff/src/: lib.rs
lib_extreme_nostd/: Cargo.toml
lib_extreme_nostd/src/: consts.rs  lib.rs  task_gps.rs  task_httpd.rs  task_sleeper.rs
lib_httpd/: Cargo.toml
lib_httpd/src/: engine_httpd.rs  lib.rs  tests.rs
nano-sketch/: Cargo.toml  build.rs  nano-sketch.ino
nano_lib/: Cargo.toml
nano_lib/src/: engine.rs  engine_traits.rs  lib.rs  race.rs
nano_lib/src/engine/: callbacks.rs  core.rs  request_wrapper.rs
race_client/: Cargo.toml  build.rs
race_client/client-js/: package-lock.json  package.json  rollup.config.js
race_client/client-js/src/: common.jsx  confirm.jsx  idle.jsx  race.jsx  sequence.jsx  setup.jsx
race_client/src/: lib.rs  line.rs  race.rs  race_tests.rs
rpi/: Cargo.toml  memory.x  rust-toolchain.toml
rpi/.cargo/: config.toml
rpi/src/: consts.rs  flash.rs  main.rs  network_tasks.rs  nmea_parser.rs  task_gps.rs  task_httpd.rs  task_sleeper.rs
src/: api.js  common.js  common.jsx  confirm.jsx  idle.jsx  index.js  index.jsx  main.js  race.jsx  sequence.jsx  setup.jsx  style.css
std_httpd/: Cargo.toml
std_httpd/src/: engine_context.rs  main.rs
test/: server.js  test_states.js
test_app/: Cargo.toml
test_app/src/: engine_context.rs  engine_traits.rs  main.rs  race.rs
tgt-pico/: Cargo.toml  memory.x  rust-toolchain.toml
tgt-pico/src/: http.rs
tgt-std/: Cargo.toml  rust-toolchain.toml
tgt-std/.cargo/: config.toml
tgt-std/src/: http.rs  main.rs
tgt-xiaoc6/: Cargo.toml  rust-toolchain.toml
tgt-xiaoc6/.cargo/: config.toml
tgt-xiaoc6/src/: http.rs  main.rs  network_tasks.rs  nmea_parser.rs
versioned/: Cargo.toml
versioned/src/: lib.rs
versioned_derive/: Cargo.toml
versioned_derive/examples/: test_versioned.rs
versioned_derive/src/: lib.rs
