[workspace]
resolver = "2"

members = [
    # where the magic happens
    "engine",
    # httpd implementation for std environment
    "lib_httpd",

    # engines
    "engine_race",
    "engine_tune",

    # apps
    "std_httpd",
    "rpi",
#    "esp32",
]


[workspace.dependencies]

embassy-executor = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", default-features = false }
embassy-net = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", default-features = false}
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", default-features = false }
embassy-time = { version = "0.3.2", git = "https://github.com/embassy-rs/embassy", default-features = false}


#
# Embedded
#
embedded-io-async = { version = "0.6.1", default-features = false }

#
# Cortex
#
embassy-rp = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", default-features = false}
embassy-usb-logger = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy" }
cyw43 = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", default-features = false }
cyw43-pio = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", default-features = false }
cortex-m-rt = { version = "0.7.0", default-features = false }
panic-probe = { version = "0.3", default-features = false }

#
# Other stuff
#
log = { version = "0.4", default-features = false }
heapless = {version = "0.8", default-features = false }
static_cell = { version = "2.1", default-features = false }
atomic-polyfill = { version = "1.0.1", default-features = false }
portable-atomic = { version = "1.5", default-features = false }

# defmt = {version = "0.3", default-features = false }
# defmt-rtt = {version = "0.4", default-features = false }



[profile.release]
lto = "fat"
opt-level = 3
#debug = 2
