[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0.188"
serde-json-core = "0.5"
httparse = { version = "1", default-features = false }
cty = "0.2.2"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
flatdiff_derive = { path = "src/flatdiff_derive" }

[dev-dependencies]
serde_json = "1.0"
paste = "1.0"
