[package]
name = "engine_race"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib"]

[build-dependencies]
include_dir = { version = "0.6", default-features = false }

[dependencies]
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
libm = "0.2"

engine = { path = '../engine' }
lib_httpd = { path = '../lib_httpd' }
