[package]
name = "extreme-race"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_derive = "1.0.188"
libm = "0.2"

extreme-traits = { path = "../extreme-traits" }

serde-json-core = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
