[package]
name = "extreme-traits"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde-json-core = { workspace = true, features = ["heapless"] }
heapless = { workspace = true }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_derive = "1.0.188"
paste = "1.0"
log = "0.4"
