[package]
name = "lib_extreme_nostd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-net = { workspace = true }

embedded-io = { workspace = true }
embedded-io-async = { workspace = true }

log = { workspace = true }


lib_httpd = { path = "../lib_httpd/" }
engine_race = { path = "../engine_race/" }
