[package]
name = "lib_httpd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
std = []
staticlib = []

[target.'cfg(feature = "staticlib")'.lib]
crate-type = ["staticlib", "lib"]


[dependencies]
serde-json-core = "0.5"
httparse = { version = "1", default-features = false }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }

engine = { path = "../engine" }

[dev-dependencies]
serde_json = "1.0"
