[package]
edition = "2021"
name = "rpi"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { workspace = true, features = ["defmt"] }
embassy-futures = { workspace = true}
embassy-usb-logger = { workspace = true }
embassy-executor = { workspace = true, features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]  }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { workspace = true, features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-net = { workspace = true, features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4" ] }
embassy-sync = { workspace = true, features = ["defmt"] }

#
# Embedded
#
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true}
embedded-io-async = { workspace = true, features = ["defmt-03"] }

#
# Cortex
#
cortex-m = { workspace = true, features = ["inline-asm"] }
cortex-m-rt = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
cyw43 = { workspace = true, features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { workspace = true, features = ["defmt"] }

#
# Other stuff
#
log = { workspace = true }
heapless = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
static_cell = { workspace = true, features = ["nightly"] }
atomic-polyfill = { workspace = true }
portable-atomic = { workspace = true, features = ["critical-section"] }

#
# The magic
#   
lib_extreme_nostd = { path = "../lib_extreme_nostd/" }
engine_race = { path = "../engine_race/" }


#[profile.release]
#debug = 2



