[package]
name = "std_httpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = { version = "1", default-features = false }

crossbeam-channel = "0.5"
once_cell = "1.7"
axum = "0.6"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
paste = "1.0"

engine = { path = "../engine" }

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }

chrono = "0.4"

engine_race= {path="../engine_race" }