[package]
name = "test_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
once_cell = "1.7"
axum = "0.2"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"

versioned = { path = "../versioned" }
versioned_derive = { path = "../versioned_derive" }
